templates/tst.template
#OPSC-6.7.7.2
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Datastax template, License: Apache 2.0 (Please do not remove) June,27,2017
  (qs-1nbqhl4up)'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: ' VPC Network Configuration'
        Parameters:
          - AvailabilityZones
          - AccessLocation
          - VPCId
          - VPCCIDR
          - PrivateSubnets
          - PublicSubnetId
      - Label:
          default: Datastax Setup
        Parameters:
          - ClusterName
          - KeyName
          - DSEVersion
          - DBPassword
      - Label:
          default: OpsCenter Setup
        Parameters:
          - OpsCenterInstanceType
          - OpsCPassword
      - Label:
          default: 1st Datacenter & Node Setup
        Parameters:
          - DC0Size
          - DC0Name
          - DC0Instance
          - DC0VolumeSize
      - Label:
          default: AWS Quick Start Configuration
        Parameters:
          - QSS3BucketName
          - QSS3BucketRegion
          - QSS3KeyPrefix
    ParameterLabels:
      AccessLocation:
        default: Permitted IP range
      AvailabilityZones:
        default: Availability Zones
      KeyName:
        default: Key Name
      DSEVersion:
        default: DSE version
      DBPassword:
        default: Database Password
      OpsCPassword:
        default: OpsCenter Password
      DC0Size:
        default: 1st Data Center Size
      DC0Name:
        default: 1st Data Center Name
      DC0Instance:
        default: 1st Data Center Instances Type
      DC0VolumeSize:
        default: 1st Data Center Volume Size
      ClusterName:
        default: Cluster Name
      QSS3BucketName:
        default: Quick Start S3 Bucket Name
      QSS3BucketRegion:
        default: Quick Start S3 bucket region
      QSS3KeyPrefix:
        default: Quick Start S3 Key Prefix
      VPCId:
        default: VPC ID
      PrivateSubnets:
        default: Private Subnets
      VPCCIDR:
        default: VPC CIDR
      PublicSubnetId:
        default: Public Subnet ID
Parameters:
  KeyName:
    Description: Public/private key pair, which allows you to connect securely to
      your instance after it launches.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  AccessLocation:
    Description: The CIDR IP range that is permitted to access the DSE OpsCenter web
      console or SSH to the EC2 instance for the console.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  AvailabilityZones:
    Type: CommaDelimitedList
    Description: The list of Availability Zones to use for the subnets in the VPC.
      The Quick Start uses three Availability Zones from your list and preserves the
      logical order you specify.
  VPCId:
    Description: Id of existing VPC
    Type: AWS::EC2::VPC::Id
  PrivateSubnets:
    Type: CommaDelimitedList
    Description: List of private subnet ids to deploy nodes into
  VPCCIDR:
    Description: CIDR block of the VPC
    Type: String
  PublicSubnetId:
    Description: Id for a public subnet in existing VPC, used for OpsCenter instance
    Type: AWS::EC2::Subnet::Id
  DSEVersion:
    Type: String
    Description: DSE version to install.
    Default: 6.7.7
    AllowedValues:
      - 5.1.15
      - 6.7.3
      - 6.7.7
  DBPassword:
    Type: String
    Description: Password for the default Cassandra user 'cassandra'.
    NoEcho: true
  OpsCPassword:
    Type: String
    Description: Password for default DSE OpsCenter administrator.
    NoEcho: true
  DC0Size:
    Description: The number of nodes to create in the 1st DSE datacenter.
    Type: Number
    Default: 3
    AllowedValues:
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
    ConstraintDescription: Value must be an integer from 3-9
  DC0Name:
    Description: Name of the 1st Data Center.
    Type: String
    Default: DC0
  DC0Instance:
    Description: EC2 instance type for the nodes in each DSE datacenter.
    Type: String
    AllowedValues:
      - t2.medium
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - i3.xlarge
      - i3.2xlarge
      - i3.4xlarge
    Default: m4.xlarge
  DC0VolumeSize:
    Description: The EBS volume size, in GiB, for the nodes in each datacenter.
    Type: Number
    AllowedValues:
      - 1024
      - 2048
    Default: 1024
  ClusterName:
    Description: The name of the DSE cluster. This is the name used by DSE OpsCenter.
    Type: String
    Default: DSE Cluster
  OpsCenterInstanceType:
    Description: Node EC2 instance type
    Type: String
    Default: m4.2xlarge
    AllowedValues:
      - m4.large
      - m4.xlarge
      - m4.2xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  QSS3BucketName:
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
      can include numbers, lowercase letters, uppercase letters, and hyphens (-).
      It cannot start or end with a hyphen (-).
    Type: String
  QSS3BucketRegion:
    Default: 'us-east-1'
    Description: 'The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.'
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: quickstart-datastax/
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    Type: String
Conditions:
  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
Resources:
  TmpS3Bucket:
    Type: AWS::S3::Bucket
  OpsCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access, and OpsCenter port
      VpcId: !Ref 'VPCId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AccessLocation
        - IpProtocol: tcp
          FromPort: 8888
          ToPort: 8888
          CidrIp: !Ref AccessLocation
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 61620
          ToPort: 61620
          CidrIp: !Ref VPCCIDR
  DSESecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access, and DSE ports
      VpcId: !Ref 'VPCId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: !Ref VPCCIDR
################
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AccessLocation
################
  DC0SeedNode1Stack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        !Sub
          - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/dse-node.template
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        DSEVersion: !Ref DSEVersion
        ClusterName: !Ref ClusterName
        DatacenterName: !Ref 'DC0Name'
###################
        CreateClusterWithPublicIP: True
###################
        # SubnetID: !Select [ 0, !Ref PrivateSubnets ]
        SubnetID: subnet-00ce98dfa31f7754a
        InstanceType: !Ref DC0Instance
        VolumeSize: !Ref DC0VolumeSize
        KeyPairName: !Ref KeyName
        S3KeyPrefix: !Ref QSS3KeyPrefix
        S3BucketName: !Ref QSS3BucketName
        S3BucketRegion: !Ref QSS3BucketRegion
        SecGroup: !GetAtt DSESecurityGroup.GroupId
        NodeNumber: "1"
        OpsCenterIp: "127.0.0.1"
        TmpS3Bucket: !Ref TmpS3Bucket
  OpsCenterstack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        !Sub
          - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/dse-opsc.template
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        DSEVersion: !Ref DSEVersion
        ClusterName: !Ref ClusterName
        KeyPairName: !Ref KeyName
        SecGroup: !GetAtt OpsCSecurityGroup.GroupId
        # SubnetId: !Ref 'PublicSubnetId'

####################
        SubnetID: subnet-00ce98dfa31f7754a
####################
        DBPassword: !Ref DBPassword
        OpsCPassword: !Ref OpsCPassword
        S3BucketName: !Ref QSS3BucketName
        S3BucketRegion: !Ref QSS3BucketRegion
        S3KeyPrefix: !Ref QSS3KeyPrefix
        InstanceType: !Ref OpsCenterInstanceType
        SeedNodeIps: !GetAtt DC0SeedNode1Stack.Outputs.Seed1PrivateIpAddress
        TmpS3Bucket: !Ref TmpS3Bucket
  DC0SeedNode2Stack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        !Sub
          - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/dse-node.template
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        DSEVersion: !Ref DSEVersion
        ClusterName: !Ref ClusterName
        DatacenterName: !Ref 'DC0Name'
        SubnetID: !Select [ 1, !Ref PrivateSubnets ]
        InstanceType: !Ref DC0Instance
        VolumeSize: !Ref DC0VolumeSize
        KeyPairName: !Ref KeyName
        S3KeyPrefix: !Ref QSS3KeyPrefix
        S3BucketName: !Ref QSS3BucketName
        S3BucketRegion: !Ref QSS3BucketRegion
        SecGroup: !GetAtt DSESecurityGroup.GroupId
        NodeNumber: "2"
        SeedNodeIps: !GetAtt DC0SeedNode1Stack.Outputs.Seed1PrivateIpAddress
        OpsCenterIp: !GetAtt 'OpsCenterstack.Outputs.OpsCenterPrivateIP'
        TmpS3Bucket: !Ref TmpS3Bucket
  DC0SeedNode3Stack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        !Sub
          - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/dse-node.template
          - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
            S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        DSEVersion: !Ref DSEVersion
        ClusterName: !Ref ClusterName
        DatacenterName: !Ref 'DC0Name'
        SubnetID: !Select [ 2, !Ref PrivateSubnets ]
        InstanceType: !Ref DC0Instance
        VolumeSize: !Ref DC0VolumeSize
        KeyPairName: !Ref KeyName
        S3KeyPrefix: !Ref QSS3KeyPrefix
        S3BucketName: !Ref QSS3BucketName
        S3BucketRegion: !Ref QSS3BucketRegion
        SecGroup: !GetAtt DSESecurityGroup.GroupId
        NodeNumber: "3"
        SeedNodeIps:
          !Join [
            ",",
            [
              !GetAtt DC0SeedNode1Stack.Outputs.Seed1PrivateIpAddress,
              !GetAtt DC0SeedNode2Stack.Outputs.Seed2PrivateIpAddress,
            ],
          ]
        OpsCenterIp: !GetAtt 'OpsCenterstack.Outputs.OpsCenterPrivateIP'
        TmpS3Bucket: !Ref TmpS3Bucket
Outputs:
  OpsCenterURL:
    Value: !GetAtt 'OpsCenterstack.Outputs.OpsCenterURL'
  OpsCenterPublicIP:
    Value: !GetAtt 'OpsCenterstack.Outputs.OpsCenterPublicIP'
    Description: Public IP for OpsCenter
